# rust-numerals

./: Cargo.toml  LICENSE  README.md
examples/: cardinals.rs
src/: lib.rs
